# desafio_sistema_salao

./: .gitignore  README.md  db.sqlite3  pyproject.toml
agendamentos/: admin.py  apps.py  forms.py  models.py  reports.py  signals.py  tests.py  urls.py  views.py
agendamentos/management/commands/: sync_professional_groups.py
agendamentos/migrations/: 0001_initial.py  0002_servico_duracao_minutos_alter_cliente_telefone_and_more.py  0003_profissional_user.py
agendamentos/templates/: base.html
agendamentos/templates/agendamentos/: agendamento_confirm_delete.html  agendamento_detail.html  agendamento_form.html  agendamento_list.html  clientes_list.html  home_profissional.html  home_recepcionista.html  login.html  relatorio_servicos.html
core/: admin.py  settings.py  urls.py
salao/: admin.py  apps.py  reports.py  signals.py  tests.py
salao/forms/: agendamento_form.py  cliente_form.py  relatorio_form.py
salao/management/commands/: sync_professional_groups.py
salao/migrations/: 0001_initial.py
salao/models/: agendamento.py  cliente.py  profissional.py  servico.py
salao/routers/: agendamento_urls.py  cliente_urls.py  login_urls.py  relatorio_urls.py
salao/templates/: base.html
salao/templates/agendamentos/: agendamento_form.html  agendamento_list.html
salao/templates/clientes/: cliente_form.html  clientes_list.html
salao/templates/home/: home_default.html  home_profissional.html  home_recepcionista.html
salao/templates/relatorio/: relatorio_servicos.html
salao/views/: cliente_view.py  home_view.py  logout.py  relatorio_view.py
