[tool.poetry]
name = "desafio-salao-de-beleza"
version = "0.1.0"
description = ""
authors = ["Rafael <rafaellevi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
pandas = "^2.3.1"
openpyxl = "^3.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
